--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Istiklal Homes</title>
+  <title>Istiklal Homes proj</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="images/favicon.ico" defer>
 
