add apartment page

--- a/front_end/blog.html
+++ b/front_end/blog.html
@@ -150,56 +150,56 @@
         <section class="links mt-3">
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Featured News</span>
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Featured News</span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Investment & Real Estate Ownership in Turkey
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Investment & Real Estate Ownership in Turkey
               </span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Tourism in Turkey
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Tourism in Turkey
               </span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Infrastructure Projects in Turkey
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Infrastructure Projects in Turkey
               </span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Legal affairs in Turkey
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Legal affairs in Turkey
               </span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Other News
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Other News
               </span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Turkey's Economy
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Turkey's Economy
               </span>
             </a>
           </div>
           <div class="px-3 py-2 bg-white hado_border hado_box_shadow mt-3">
             <a href="#">
-              <img src="images/pas- tr.jpg" class="mx-5" alt="">
-              <span class="fw-bold fs-4 text-primary ">Turkish Citizenship
+              <img src="images/pas- tr.jpg" class="mx-3" alt="">
+              <span class="fw-bold fs-6 text-primary ">Turkish Citizenship
               </span>
             </a>
           </div>
@@ -339,7 +339,7 @@
           </div>
         </section>
 
-        <div class="px-3 py-2 bg-primary hado_border hado_box_shadow mt-3">
+        <div class="px-3 bg-primary hado_border hado_box_shadow mt-3">
           <a href="#" class="p-5">
             <h4 class="fw-bold text-white mx-5 pt-5 ">Buy Now, Pay Later</h4>
             <p class="text-white mx-5 py-5 ">Flexible installment Apartments for sale in Turkey</p>
