--- a/front_end/index.html
+++ b/front_end/index.html
@@ -111,7 +111,7 @@
 
               <ul class="list-unstyled" id="main-nav"> 
               
-                <li class=""><a href="#"> Home</a></li>
+                <li class=""><a href="index.html"> Home</a></li>
                 <li class=""><a href="project.html"> Projects</a></li>
                 <li class=""><a href="contact.html"> Contact</a></li>
                 <li class=""><a href="404.html"> 404</a></li>
@@ -292,7 +292,7 @@
         <div class="owl-carousel">
           <div class="card">
             <div></div>
-            <img src="images/real.jpg" class="card-img-top" alt="...">
+            <a href="apartment.html"><img src="images/real.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body bg-secondary">
                 <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
                 <div class="mt-3"><i class="fa-solid fa-location text-secondary"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-secondary"></i> <span class="text-primary"> Apartment </span></div>
@@ -702,9 +702,28 @@
     </div>
   </div>
 
+  <!-- <div class=" contact-said m-5">
+    <i class="fa-solid fa-comment-dots bg-primary p-2 rounded text-white"></i>
+    <ul class="list-unstyled">
+      <li><i class="fa-brands fa-whatsapp text-white"></i></li>
+      <li><i class="fa-brands fa-facebook-messenger text-white"></i></li>
+      <li><i class="fa-solid fa-phone text-white"></i></li>
+      <li><i class="fa-solid fa-pen-to-square text-white"></i></li>
+    </ul>
+  </div> -->
 
+  <div class="st">
+    <div class="ribbon position-relative d-lg-none">
+      <a href="#" class="whatsapp position-absolute start-50 translate-middle"><i class="fa-brands fa-whatsapp text-white fs-2"></i></a>
+      <div class="d-flex bg-dark py-3 justify-content-between px-5">
+        <a href="#"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+        <a href="#"><i class="fa-solid fa-align-justify text-white"></i></a>
+        <a href="#"><i class="fa-solid fa-comments text-white"></i></a>
+        <a href="#"><i class="fa-solid fa-share-nodes text-white"></i></a>
+      </div>
+    </div>
+  </div>
 
- 
 
     <!--- footer --->
   <footer id="contact" class="mt-3">
