--- a/front_end/project.html
+++ b/front_end/project.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body class="project">
 
     <header class="bg-white p-md-2">
     <div class="container">
@@ -139,12 +139,12 @@
     </header>
 
     <div class="container">
-        <section class=" project mt-3">
+        <section class=" mt-3">
             <div class="row">
                 <div class=" said col-lg-3">                
                     <div class="px-3 py-2 bg-white hado_border hado_box_shadow">
                         <h5 class="p-10 fw-bold mx-4 mt-3 text-center text-primary">Let us contact you to help you</h5>
-                        <p class="text-center">Choose the best real estate</p> 
+                        <p class="text-center text-warning">Choose the best real estate</p> 
                         <input type="text" placeholder="Name*">
                         <input type="text" placeholder="Telephon">
                         <input type="text" placeholder="E-mail">
@@ -159,29 +159,155 @@
                         </h5>
                         <img src="images/Turkey-passport.jpg" class="img-fluid  mt-3" alt="">
                         <div class="text-center mt-3 mb-3">
-                            <a href=""><button class="btn btn-primary px-5">send</button></a>
+                            <a href=""><button class="btn btn-primary px-5 mt-3">send</button></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-9">
+                <div class="col-lg-9">
                     <div class="px-3 py-2 bg-white hado_border hado_box_shadow">
-                        <h5 class="text-primary m-3 ">Apartments For Sale In Istanbul 2022</h5>
-                        <p class="mx-3">Apartments for sale in Istanbul is the title of this article, highlighting the most important advantages of owning and investing in Istanbul by buying an apartment. We also highlight the idea of acquiring Turkish citizenship by buying an apartment or property in Istanbul.</p>
-                        <div>
-                            <i class="fa-solid fa-heart mx-3"></i>
-                            <span>1650 like</span>
+                        <h5 class="text-primary m-3 fw-bold">Apartments For Sale In Istanbul 2022</h5>
+                        <p class="mx-3 text-black-50 ">Apartments for sale in Istanbul is the title of this article, highlighting the most important advantages of owning and investing in Istanbul by buying an apartment. We also highlight the idea of acquiring Turkish citizenship by buying an apartment or property in Istanbul.</p>
+                        <div class="text-primary">
+                          <i class="fa-solid fa-heart mx-3"></i>
+                          <span class="text-warning">1650 like</span>
                         </div>
-                        <div class="Social m-3">
+                        <div class="Social m-3 text-primary">
                             <i class="fa-solid fa-share-nodes"></i>
-                            <span>share</span>
-                            <i class="fab fa-facebook"></i>
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-whatsapp"></i>
+                            <span class="text-warning">share</span>
+                            <a href="#" class="text-primary mx-2"><i class="fab fa-facebook"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#" class="text-success mx-2"><i class="fab fa-whatsapp"></i></a>
                         </div>
+                    </div>
+
+                    <div id="proj-tabs" class=" proj-tabs mt-3 hado_border">
+                      <ul class="titles mb-2 mt-3 p-0">
+                        <li><a href="#tabs-1">Properties</a></li>
+                        <li><a href="#tabs-2">Overview</a></li>
+                      </ul> 
+                      <div class="tab-body">
+                        <div id="tabs-1">
+                          <div class="row">
+                            <div class="col-md-6">
+                              <div class="mb-3">
+                                <img src="images/real.jpg" class="card-img-top" alt="...">
+                                <div class="card-body bg-secondary">
+                                    <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-secondary"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-secondary"></i> <span class="text-primary"> Apartment </span></div>
+                                    <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
+                                    <p> Starting at <br/> <b class="text-primary fs-4"> 35.000 $</b></p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-md-6">
+                              <div class="mb-3">
+                                <img src="images/real.jpg" class="card-img-top" alt="...">
+                                <div class="card-body bg-secondary">
+                                    <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-secondary"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-secondary"></i> <span class="text-primary"> Apartment </span></div>
+                                    <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
+                                    <p> Starting at <br/> <b class="text-primary fs-4"> 35.000 $</b></p>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-6">
+                              <div class="mb-3">
+                                <img src="images/real.jpg" class="card-img-top" alt="...">
+                                <div class="card-body bg-secondary">
+                                    <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-secondary"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-secondary"></i> <span class="text-primary"> Apartment </span></div>
+                                    <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
+                                    <p> Starting at <br/> <b class="text-primary fs-4"> 35.000 $</b></p>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-6">
+                              <div class="mb-3">
+                                <img src="images/real.jpg" class="card-img-top" alt="...">
+                                <div class="card-body bg-secondary">
+                                    <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-secondary"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-secondary"></i> <span class="text-primary"> Apartment </span></div>
+                                    <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
+                                    <p> Starting at <br/> <b class="text-primary fs-4"> 35.000 $</b></p>
+                                </div>
+                              </div>
+                            </div>
+
+                          </div>
+
+                          <div class="px-3 bg-primary hado_border hado_box_shadow mt-3">
+                            <a href="#" class="p-5">
+                              <h4 class="fw-bold text-white mx-3 pt-5 ">Buy Now, Pay Later</h4>
+                              <p class="text-white mx-3 py-5 ">Flexible installment Apartments for sale in Turkey</p>
+                            </a>
+                          </div>
+
+                        </div>
+                        <div id="tabs-2" class="tabs-2">
+                          <div>
+                            <h3 class="text-primary">Table Of Contents</h3>
+                            <ul>
+                              <li><a href="#">Istanbul | Love, Life, Beauty and investment in One Place</a></li>
+                              <li><a href="#">What makes Istanbul a great choice for residence and investment? And the apartments for sale in Istanbul, do they meet the desires and needs?</a>
+                                <ul>
+                                  <li><a href="#">Apartments for sale in Istanbul within fully serviced residential complexes</a></li>
+                                  <li><a href="#">Apartments for sale in Istanbul within fully serviced residential complexes</a></li>
+                                  <li><a href="#">Apartments for sale in Istanbul within fully serviced residential complexes</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#">Apartments for sale in Istanbul, with different sizes and prices</a>
+                                <ul>
+                                  <li><a href="#">Spaces of apartments in Istanbul</a></li>
+                                  <li><a href="#">Spaces of apartments in Istanbul</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#">Apartments for sale in Istanbul, with different sizes and prices</a>
+                                <ul>
+                                  <li><a href="#">Spaces of apartments in Istanbul</a></li>
+                                  <li><a href="#">Luxury apartments for sale in Istanbul that fulfill requirements of the Turkish citizenship</a></li>
+                                  <li><a href="#">Spaces of apartments in Istanbul</a></li>
+                                </ul>
+                              </li>
+                              <li><a href="#">In case you decided to buy an apartment in Istanbul | What can Imtilak Real Estate do for you?</a></li>
+                            </ul>
+
+                            <h3 class="text-primary">Istanbul | Love, Life, Beauty and investment in One Place</h3>
+                            <p>Apartments for sale in Istanbul is the title of this article, highlighting the most important advantages of owning and investing in Istanbul by buying an apartment. We also highlight the idea of acquiring Turkish citizenship by buying an apartment or property in Istanbul.</p>
+                            <p>Apartments for sale in Istanbul is the title of this article, highlighting the most important advantages of owning and investing in Istanbul by buying an apartment. We also highlight the idea of acquiring Turkish citizenship by buying an apartment or property in Istanbul.</p>
+                            <p>At first sight, those who think about monuments of Istanbul feel the greatness, splendor of perfection, and the awesomeness of Allah's creation in what he created. Nowadays, social media websites and other media are full of hundreds of ads titled "Apartments for Sale in Istanbul". Is it really worth it? And if so, how and where do I start the journey of the search?</p>
+                            <div>
+                              <img src="images/istanbul-real-estate.jpg" class="img-fluid w-100" alt="">
+                            </div>
+                            <h3 class="text-primary my-5">What makes Istanbul a great choice for residence and investment? And the apartments for sale in Istanbul, do they meet the desires and needs?</h3>
+                            <p>Residential projects in Istanbul currently take the form of high-quality housing complexes that conform to the latest international specifications and standards. The part that has the largest area in these complexes is dedicated to services, public utilities, and green spaces.</p>
+                            <ol>
+                              <li>Apartments for sale in Istanbul are available within luxurious residential complexes with a distinctive level of comfort, in which you can find the best conditions and specifications, as follows:
+                                They include gardens and green spaces that provide a fresh and clean atmosphere in addition to distinctive views.Apartments for sale in Istanbul are available within luxurious residential complexes with a distinctive level of comfort, in which you can find the best conditions and specifications, as follows:
+                                They include gardens and green spaces that provide a fresh and clean atmosphere in addition to distinctive views.
+                              </li>
+                              <li>They include places for relaxation and serenity, as well as trails for walking and cycling.</li>
+                              <li>Apartments for sale in Istanbul are available within luxurious residential complexes with a distinctive level of comfort, in which you can find the best conditions and specifications, as follows:
+                                They include gardens and green spaces that provide a fresh and clean atmosphere in addition to distinctive views.Apartments for sale in Istanbul are available within luxurious residential complexes with a distinctive level of comfort, in which you can find the best conditions and specifications, as follows:
+                                They include gardens and green spaces that provide a fresh and clean atmosphere in addition to distinctive views.
+                              </li>
+                              <li>They include places for relaxation and serenity, as well as trails for walking and cycling.</li>
+                              <li>Apartments for sale in Istanbul are available within luxurious residential complexes with a distinctive level of comfort, in which you can find the best conditions and specifications, as follows:
+                                They include gardens and green spaces that provide a fresh and clean atmosphere in addition to distinctive views.Apartments for sale in Istanbul are available within luxurious residential complexes with a distinctive level of comfort, in which you can find the best conditions and specifications, as follows:
+                                They include gardens and green spaces that provide a fresh and clean atmosphere in addition to distinctive views.
+                              </li>
+                              <li>They include places for relaxation and serenity, as well as trails for walking and cycling.</li>
+                            </ol>
+                          </div>
+                        </div>
+                      </div>
+                      
                     </div>
                 </div>
             </div>
         </section>
+
     </div>
 
 
