--- a/front_end/contact.html
+++ b/front_end/contact.html
@@ -142,7 +142,7 @@
     <section class="mt-3">
         <div class="container">
             <div class="row">
-                <div class=" my-sidebar said col-lg-3">  
+                <div class=" my-sidebar col-lg-3">  
                   <div class="">
                     <div class="px-3 py-2 bg-white hado_border hado_box_shadow">
                       <h4 class="p-10 fw-bold mx-4 mt-3 text-center text-primary"> search for your apartment</h4>
@@ -161,7 +161,7 @@
                       </h5>
                       <img src="images/Turkey-passport.jpg" class="img-fluid  mt-3" alt="">
                       <div class="text-center mt-3 mb-3">
-                          <a href=""><button class="btn btn-primary px-5">send</button></a>
+                          <a href=""><button class="btn btn-primary px-5 mt-3">send</button></a>
                       </div>
                   </div>
                   </div>              
