change the color

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -712,17 +712,7 @@
     </ul>
   </div> -->
 
-  <div class="st">
-    <div class="ribbon position-relative d-lg-none">
-      <a href="#" class="whatsapp position-absolute start-50 translate-middle"><i class="fa-brands fa-whatsapp text-white fs-2"></i></a>
-      <div class="d-flex bg-dark py-3 justify-content-between px-5">
-        <a href="#"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
-        <a href="#"><i class="fa-solid fa-align-justify text-white"></i></a>
-        <a href="#"><i class="fa-solid fa-comments text-white"></i></a>
-        <a href="#"><i class="fa-solid fa-share-nodes text-white"></i></a>
-      </div>
-    </div>
-  </div>
+
 
 
     <!--- footer --->
@@ -827,7 +817,17 @@
 
   <!--- footer --->
 
-
+  <div class="st">
+    <div class="ribbon position-relative d-lg-none">
+      <a href="#" class="whatsapp position-absolute start-50 translate-middle "><i class="fa-brands fa-whatsapp text-white fs-2 heartbeat"></i></a>
+      <div class="d-flex bg-dark py-3 justify-content-between px-5">
+        <a href="#"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+        <a href="#"><i class="fa-solid fa-align-justify text-white"></i></a>
+        <a href="#"><i class="fa-solid fa-comments text-white"></i></a>
+        <a href="#"><i class="fa-solid fa-share-nodes text-white"></i></a>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
