adding landing page

--- a/front_end/about.html
+++ b/front_end/about.html
@@ -172,6 +172,16 @@
             <div class="bg-white mt-3 p-3 hado-border">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In beatae porro eius nulla ab libero neque eum totam quam qui. Tenetur tempora eos ullam voluptas autem error temporibus labore quos.                    
                 </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio laudantium dolorem ea, nihil, cupiditate impedit tenetur sequi culpa voluptatibus, dolores molestiae? Corrupti odit ipsam saepe non perferendis eius deleniti ad.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti consequatur ut consectetur? Iste provident ratione sint laborum ipsam labore accusantium vel sit corrupti. Nobis ut harum hic. Itaque, illo omnis.
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, blanditiis iste. Assumenda consequatur voluptate beatae, odio veniam, explicabo molestias ex placeat molestiae recusandae vitae reiciendis, nihil tenetur sit doloribus cumque.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ex illo dolore pariatur voluptatem cumque incidunt necessitatibus maxime placeat officia, quis, quod itaque consectetur dolorem laudantium eveniet at. Doloremque, vel.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus iure cum, dignissimos provident eos debitis blanditiis dolorum atque obcaecati alias officia ullam harum ducimus, possimus, nesciunt inventore. Excepturi, amet incidunt?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, reiciendis iure soluta corrupti vel, impedit voluptatibus voluptatum voluptates aliquam eligendi dolore iste. Ipsum incidunt culpa cupiditate impedit exercitationem molestiae obcaecati!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatum reprehenderit praesentium ex debitis totam quam non libero? Aliquam voluptatum aspernatur adipisci aliquid, voluptatibus fuga hic qui consequatur mollitia asperiores?
+                </p>
+                
 
             </div>
         </div>
