--- a/front_end/project.html
+++ b/front_end/project.html
@@ -166,9 +166,9 @@
                     <div class="px-3 py-2 bg-white hado_border hado_box_shadow">
                         <h5 class="text-primary m-3 fw-bold">Apartments For Sale In Istanbul 2022</h5>
                         <p class="mx-3 text-black-50 ">Apartments for sale in Istanbul is the title of this article, highlighting the most important advantages of owning and investing in Istanbul by buying an apartment. We also highlight the idea of acquiring Turkish citizenship by buying an apartment or property in Istanbul.</p>
-                        <div class="text-primary">
-                          <i class="fa-solid fa-heart mx-3"></i>
-                          <span class="text-warning">1650 like</span>
+                        <div class="text-primary mx-3">
+                          <i class="fa-solid fa-heart"></i>
+                          <span class="text-warning">1650</span>
                         </div>
                         <div class="Social m-3 text-primary">
                             <i class="fa-solid fa-share-nodes"></i>
@@ -192,9 +192,11 @@
                                 <img src="images/real.jpg" class="card-img-top" alt="...">
                                 <div class="card-body bg-white">
                                     <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
-                                    <div class="mt-3"><i class="fa-solid fa-location text-warning"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-warning"></i> <span class="text-primary"> Apartment </span></div>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-primary"></i> <span class="text-warning"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-primary"></i> <span class="text-warning"> Apartment </span></div>
                                     <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
-                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b></p>
+                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b>
+                                      <span class=" float-right"><i class="fa-solid fa-heart text-warning"></i></span>
+                                    </p>
                                 </div>
                               </div>
                             </div>
@@ -203,21 +205,11 @@
                                 <img src="images/real.jpg" class="card-img-top" alt="...">
                                 <div class="card-body bg-white">
                                     <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
-                                    <div class="mt-3"><i class="fa-solid fa-location text-warning"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-warning"></i> <span class="text-primary"> Apartment </span></div>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-primary"></i> <span class="text-warning"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-primary"></i> <span class="text-warning"> Apartment </span></div>
                                     <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
-                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b></p>
-                                </div>
-                              </div>
-                            </div>
-
-                            <div class="col-md-6">
-                              <div class="mb-3 hado_border">
-                                <img src="images/real.jpg" class="card-img-top" alt="...">
-                                <div class="card-body bg-white">
-                                    <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
-                                    <div class="mt-3"><i class="fa-solid fa-location text-warning"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-warning"></i> <span class="text-primary"> Apartment </span></div>
-                                    <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
-                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b></p>
+                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b>
+                                      <span class=" float-right"><i class="fa-solid fa-heart text-warning"></i></span>
+                                    </p>
                                 </div>
                               </div>
                             </div>
@@ -227,9 +219,25 @@
                                 <img src="images/real.jpg" class="card-img-top" alt="...">
                                 <div class="card-body bg-white">
                                     <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
-                                    <div class="mt-3"><i class="fa-solid fa-location text-warning"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-warning"></i> <span class="text-primary"> Apartment </span></div>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-primary"></i> <span class="text-warning"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-primary"></i> <span class="text-warning"> Apartment </span></div>
                                     <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
-                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b></p>
+                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b>
+                                      <span class=" float-right"><i class="fa-solid fa-heart text-warning"></i></span>
+                                    </p>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-6">
+                              <div class="mb-3 hado_border">
+                                <img src="images/real.jpg" class="card-img-top" alt="...">
+                                <div class="card-body bg-white">
+                                    <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
+                                    <div class="mt-3"><i class="fa-solid fa-location text-primary"></i> <span class="text-warning"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-primary"></i> <span class="text-warning"> Apartment </span></div>
+                                    <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
+                                    <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b>
+                                      <span class=" float-right"><i class="fa-solid fa-heart text-warning"></i></span>
+                                    </p>
                                 </div>
                               </div>
                             </div>
