--- a/front_end/blog.html
+++ b/front_end/blog.html
@@ -30,6 +30,7 @@
 
 <body class="blog-page">
   <header class="bg-white p-md-2">
+    
     <div class="container">
 
       <div class="row flex-wrap">
@@ -355,9 +356,11 @@
               <img src="images/real.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                   <h5 class="card-title mb-2 fw-bold">Galaxy Tower Project IMT-160</h5>
-                  <div class="mt-3"><i class="fa-solid fa-location text-warning"></i> <span class="text-primary"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-warning"></i> <span class="text-primary"> Apartment </span></div>
+                  <div class="mt-3"><i class="fa-solid fa-location text-primary"></i> <span class="text-warning"> Istan-2bul,Yeni bosna </span> <i class="fa-solid fa-house-user text-primary"></i> <span class="text-warning"> Apartment </span></div>
                   <p class="card-text mt-3 mb-2">Apartments for sale on Basin Express within Galaxy tower project, luxury designs and installments fo....</p>
-                  <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b></p>
+                  <p> Starting at <br/> <b class="text-warning fs-4"> 35.000 $</b>
+                    <span class=" float-right"><i class="fa-solid fa-heart text-warning"></i></span>
+                  </p>
               </div>
             </div>
           </div>
